// SPDX-FileCopyrightText: 2020 The Magma Authors.
// SPDX-FileCopyrightText: 2022 Open Networking Foundation <support@opennetworking.org>
//
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";
package magma.orc8r;

import "orc8r/protos/common.proto";

option go_package = "magma/orc8r/lib/go/protos";


// --------------------------------------------------------------------------
// ServiceRegistry supports dynamic service discovery.
// --------------------------------------------------------------------------
service ServiceRegistry {

  // ListAllServices returns the service name of all services in the registry.
  rpc ListAllServices (Void) returns (ListAllServicesResponse) {}

  // FindServices returns the names of all services that have the passed label.
  rpc FindServices (FindServicesRequest) returns (FindServicesResponse) {}

  // GetServiceAddress returns the service address of a given service.
  rpc GetServiceAddress (GetServiceAddressRequest) returns (GetServiceAddressResponse) {}

  // GetHttpServerAddress returns the address for a service's HTTP server.
  rpc GetHttpServerAddress (GetHttpServerAddressRequest) returns (GetHttpServerAddressResponse) {}

  // GetAnnotation returns the annotation value for the passed annotation
  // name.
  rpc GetAnnotation(GetAnnotationRequest) returns (GetAnnotationResponse) {}
}

message ListAllServicesResponse {
  repeated string services = 1;
}

message FindServicesRequest {
  string label = 1;
}

message FindServicesResponse {
  repeated string services = 1;
}

message GetServiceAddressRequest {
  string service = 1;
}

message GetServiceAddressResponse {
  string address = 1;
}

message GetHttpServerAddressRequest {
  string service = 1;
}

message GetHttpServerAddressResponse {
  string address = 1;
}

message GetAnnotationRequest {
  string service = 1;
  string annotation = 2;
}

message GetAnnotationResponse {
  string annotation_value = 1;
}
